--- a/MouseMoveWFevent/MouseMoveWFevent.csproj
+++ b/MouseMoveWFevent/MouseMoveWFevent.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Product>MouseMover</Product>
+    <AssemblyName>MouseMover</AssemblyName>
   </PropertyGroup>
 
 </Project>
